# WhosWatching

./: .gitignore  CMakeLists.txt  DEFINITIONS.h  Game.cpp  Game.h  README.md  main.cpp  pch.h
Config/: graphics.ini
Config/KeyBindings/: EditorStateKeyBinds.ini  GameStateKeyBinds.ini
Engine_Managers/: AssetManager.cpp  AssetManager.h  GraphicsSettings.cpp  GraphicsSettings.h  InputManager.cpp  InputManager.h  StateMachine.cpp  StateMachine.h
Entities/: Entity.cpp  Entity.h  Player.cpp  Player.h
GameVideo/: whoswatchin.webm
Game_Components/: AnimationComponent.cpp  AnimationComponent.h  AttributeComponent.cpp  AttributeComponent.h  Button.cpp  Button.h  DropDownList.cpp  DropDownList.h  HUD.cpp  HUD.h  HitboxComponent.cpp  HitboxComponent.h  MovementComponent.cpp  MovementComponent.h  TextureSelector.cpp  TextureSelector.h
Items/: Callout.cpp  Callout.h
Map/: TileMap.cpp  TileMap.h
Resources/: myMap.txt
Resources/KeyBindings/: GameStateKeyBinds.ini  KeyBinds.ini  MainMenuKeyBinds.ini
Resources/inputFiles/: messages.txt  questions.txt
Resources/questions/: questions.txt
States/: EditorState.cpp  EditorState.h  GameOverMenu.cpp  GameOverMenu.h  GameSettingsState.cpp  GameSettingsState.h  GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  PauseMenu.cpp  PauseMenu.h  PauseState.cpp  PauseState.h  SplashState.cpp  SplashState.h  State.h
Tile/: Tile.cpp  Tile.h
